objects/Employ_Management__c.object
<CustomObject>
    <fields>
        <fullName>Date_Of_Joining__c</fullName>
        <label>Date Of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Name__c</fullName>
        <label>Employee Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <scale>4</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <label>Portfolio</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <label>Skill</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MERN</fullName>
                </value>
                <value>
                    <fullName>JAVA</fullName>
                </value>
                <value>
                    <fullName>PYTHON</fullName>
                </value>
                <value>
                    <fullName>SALESFORCE</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>TESTING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employ Management</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Employ Management  Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employ Managements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>